{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 99,
  "lineage": "52e0c332-99bc-dbb3-b3fe-405c77437764",
  "resources": [
    {
      "module": "module.modulecomputedemo",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm16",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:737795138174:instance/i-02e016a7ce26722c8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e016a7ce26722c8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-062312cfb07d66c44",
            "private_dns": "ip-10-222-1-166.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.222.1.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b02a8bc97987a6ea",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015db1381a20bd2f6",
            "tags": {
              "Name": "vmuser16"
            },
            "tags_all": {
              "Name": "vmuser16"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e1fbb23ece61c9f"
            ]
          },
          "dependencies": [
            "module.modulecomputedemo.aws_security_group.db-sguser16"
          ]
        }
      ]
    },
    {
      "module": "module.modulecomputedemo",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-igway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "igw-0b6a9b05f49afa1d8",
            "tags": {
              "Name": "dev-250-igateway"
            },
            "tags_all": {
              "Name": "dev-250-igateway"
            },
            "vpc_id": "vpc-094579365b61b900d"
          }
        }
      ]
    },
    {
      "module": "module.modulecomputedemo",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sguser16",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:security-group/sg-08e1fbb23ece61c9f",
            "description": "Db server traffic allowed ssh \u0026 http",
            "egress": [],
            "id": "sg-08e1fbb23ece61c9f",
            "ingress": [],
            "name": "db-web-ssh-sguser16",
            "name_prefix": "",
            "owner_id": "737795138174",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-094579365b61b900d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.modulenetworkdemo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn16",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:subnet/subnet-0f56d76ae94ccc645",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.222.61.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f56d76ae94ccc645",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "737795138174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subneweb1 - dev-001"
            },
            "tags_all": {
              "Name": "subneweb1 - dev-001"
            },
            "vpc_id": "vpc-094579365b61b900d"
          }
        }
      ]
    },
    {
      "module": "module.modulenetworkdemo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:subnet/subnet-09f2c34ada81d73e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.222.53.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f2c34ada81d73e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "737795138174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetdb - dev-001"
            },
            "tags_all": {
              "Name": "subnetdb - dev-001"
            },
            "vpc_id": "vpc-094579365b61b900d"
          }
        }
      ]
    },
    {
      "module": "module.modulesecuritygroupdemo",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:security-group/sg-04beee7fdfc2448b7",
            "description": "Db server traffic allowed ssh \u0026 http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04beee7fdfc2448b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "db-web-ssh-sg16",
            "name_prefix": "",
            "owner_id": "737795138174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-094579365b61b900d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.modulesecuritygroupdemo",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "db-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:security-group-rule/sgr-0e152dd6441e0b8f4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e152dd6441e0b8f4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04beee7fdfc2448b7",
            "security_group_rule_id": "sgr-0e152dd6441e0b8f4",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.modulesecuritygroupdemo.aws_security_group.db-sg"
          ]
        }
      ]
    },
    {
      "module": "module.modulesecuritygroupdemo",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db-ingress-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:security-group-rule/sgr-08cc34a58dcc00acd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-08cc34a58dcc00acd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04beee7fdfc2448b7",
            "security_group_rule_id": "sgr-08cc34a58dcc00acd",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.modulesecuritygroupdemo.aws_security_group.db-sg"
          ]
        }
      ]
    },
    {
      "module": "module.modulesecuritygroupdemo",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db-ingress-80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:security-group-rule/sgr-0ff0060b2b2b20b2e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0ff0060b2b2b20b2e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04beee7fdfc2448b7",
            "security_group_rule_id": "sgr-0ff0060b2b2b20b2e",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.modulesecuritygroupdemo.aws_security_group.db-sg"
          ]
        }
      ]
    }
  ]
}